force-app/main/default/objects/offboarding_Tasks__mdt/offboarding_Tasks__mdt.object-meta.xml
<CustomObject>
    <label>Offboarding Tasks</label>
    <pluralLabel>Offboarding Tasks</pluralLabel>
</CustomObject>