force-app/main/default/objects/offboarding_Tasks__mdt/fields/Due_Date_Days__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Days__c</fullName>
    <label>Due Date (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>