force-app/main/default/objects/offboarding_Tasks__mdt/fields/Notification_Required_HR__c.field-meta.xml
<CustomField>
    <fullName>Notification_Required_HR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification Required (HR)</label>
    <type>Checkbox</type>
</CustomField>