force-app/main/default/objects/offboarding_Tasks__mdt/fields/Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Owner_Type__c</fullName>
    <label>Owner Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queue</fullName>
                <default>true</default>
                <label>Queue</label>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Resource Manager</fullName>
            </value>
            <value>
                <fullName>Reporting Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>