force-app/main/default/objects/offboarding_Tasks__mdt/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Assigned_To__c</columns>
    <columns>Owner_Type__c</columns>
    <columns>Task_Subject__c</columns>
    <columns>Notification_Required_HR__c</columns>
    <columns>Due_Date_Days__c</columns>
    <columns>Unique_Identifier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>